--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>americana</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
     <header class="conteine">
-        <div class="conteine-01">
-            <i class="fa-solid fa-bars"></i>
-            <h1>americamas</h1>
-        </div>
+        <div class="conteine-menu"></div><i class="fa-solid fa-bars"></i>
+        <div class="conteine-nome"></div><h1>americamas</h1>
+        <div class="conteine-compra"></div><i class="fa-light fa-basket-shopping"></i>
+    
     </header>
 </body>
 </html>
