--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
-    <header class="conteine">
-        <div class="conteine-menu"></div><i class="fa-solid fa-bars"></i>
-        <div class="conteine-nome"></div><h1>americamas</h1>
-        <div class="conteine-compra"></div><i class="fa-light fa-basket-shopping"></i>
-    
+    <header class="conteiner">
+        <div class="conteine-1">
+            <div class="conteine-menu"><i class="fa-solid fa-bars"></i></div>
+            <div class="conteine-nome"><h1>americamas</h1></div>
+            <div class="conteine-compra"><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></div>
+        </div>
+        <div class="conteiner-pesquisa">
+            <input type="text" id="txbusca" placeholder="buscar aqui seu produto">
+        </div>
+        <div class="conteine-local"><p>localização</p></div>
     </header>
 </body>
 </html>
