--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="conteiner-pesquisa">
             <input type="text" id="txbusca" placeholder="buscar aqui seu produto">
         </div>
+        <div class="conteine-compra-1"><a href="#"><i class="fa-solid fa-basket-shopping"></i></a></div>
         <div class="conteine-local"><p>localização</p></div>
     </header>
 </body>
